# madlibs-vala

./: README.md  main.vala  meson.build
src/: basic_madlibs.vala  template_madlibs.vala
